Support and document classpath management according to revised configuration. Also support specifying dependencies.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/exec-maven-plugin@809 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -74,13 +74,13 @@
     </dependency>      
   </dependencies>
 
-  <build>
+  <!--build>
     <extensions>
       <extension>
         <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh-external</artifactId>
+        <artifactId>wagon-ssh</artifactId>
         <version>1.0-alpha-5-SNAPSHOT</version>
       </extension>
     </extensions>
-  </build>
+  </build-->
 </project>
