created sandbox mojo parent. Updated poms to use new parent.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/exec-maven-plugin@1275 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>mojo</artifactId>
+    <artifactId>mojo-sandbox</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>5</version>
+    <version>1</version>
   </parent>
   <artifactId>exec-maven-plugin</artifactId>
   <version>0.4-SNAPSHOT</version>
