Add urls to pom so that the plugin documentation get correctly deployed.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/mojo-sandbox/exec-maven-plugin@1317 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
   <inceptionYear>2005</inceptionYear>
+  <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <licenses>
     <license>
       <name>Apache License 2</name>
