--- a/pom.xml
+++ b/pom.xml
@@ -45,43 +45,16 @@
       <version>2.0</version>
     </dependency>      
     <dependency>
-      <groupId>plexus</groupId>
+      <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-      <version>1.0.3</version>
+      <version>1.1</version>
     </dependency>      
     <dependency>
-      <groupId>plexus</groupId>
-      <artifactId>plexus-container-artifact</artifactId>
-      <version>1.0-alpha-3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>plexus</groupId>
+      <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-container-default</artifactId>
-      <version>1.0-alpha-5</version>
+      <version>1.0-alpha-9</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.apache.maven.wagon</groupId>
-      <artifactId>wagon-provider-api</artifactId>
-      <version>1.0-alpha-5</version>
-      <scope>test</scope>
-    </dependency>      
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <version>2.0</version>
-      <scope>test</scope>
-    </dependency>      
   </dependencies>
 
-  <!--build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh</artifactId>
-        <version>1.0-alpha-5-SNAPSHOT</version>
-      </extension>
-    </extensions>
-  </build-->
 </project>
