--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>mojo-sandbox</artifactId>
+    <artifactId>mojo</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>2-SNAPSHOT</version>
+    <version>7</version>
   </parent>
   <artifactId>exec-maven-plugin</artifactId>
-  <version>0.5-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
   <inceptionYear>2005</inceptionYear>
