MEXEC-2: fixed documentation for workingDir field.
workingDirectory property and setter had different name so this created some confusion.
- doc was fixed
- manual test case was improved
- setters were renamed to avoid further confusion



git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@1798 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/projects/project3/pom.xml
+++ b/src/test/projects/project3/pom.xml
@@ -63,6 +63,7 @@
            </execution>
         </executions>
         <configuration>
+          <workingDirectory>target</workingDirectory>
           <executable>java</executable>
           <arguments>
             <argument>-Dproject.env1=value1</argument>
@@ -72,7 +73,7 @@
               <dependency>commons-logging:commons-logging</dependency>
             </classpath>
             <argument>org.codehaus.mojo.exec.test3.Test</argument>
-            <argument>target/exec/output.txt</argument>
+            <argument>exec/output.txt</argument>
           </arguments>
         </configuration>
       </plugin>
