Fix test pom artifactIds.
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@1810 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/projects/project3/pom.xml
+++ b/src/test/projects/project3/pom.xml
@@ -1,7 +1,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cb.maven.plugins.exec</groupId>
-  <artifactId>test1</artifactId>
+  <artifactId>project3</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
   <name>Maven Exec Plugin</name>
