--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>exec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
   <developers>
@@ -71,10 +71,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <scm>
-    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.0.2</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.0.2</developerConnection>
-    <url>https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.0.2</url>
-  </scm>
 </project>
