--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
-      <version>2.0</version>
+      <version>2.0.4</version> 
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -68,6 +68,12 @@
       <artifactId>maven-plugin-testing-harness</artifactId>
       <version>1.0-beta-1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-embedder</artifactId>
+      <version>2.0.4</version>
+      <scope>test</scope> 
     </dependency>
   </dependencies>
 </project>
