MEXEC-14 Don't have plugin's classloader on classpath for executed code. Also fixes MEXEC-9
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@2865 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/projects/project8/pom.xml
+++ b/src/test/projects/project8/pom.xml
@@ -29,6 +29,7 @@
         </executions>
         <configuration>
           <mainClass>org.codehaus.mojo.exec.DummyMain</mainClass>
+          <commandline_args>"Arg1" "Arg2a Arg2b"</commandline_args>
         </configuration>
       </plugin>
     </plugins>
