--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
   <version>1.1-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
+  <issueManagement>
+    <system>jira</system>
+    <url>http://jira.codehaus.org/browse/MEXEC</url>
+  </issueManagement>
+
   <developers>
     <developer>
       <id>jerome</id>
