MEXEC-15: allow the user to time out on joining on uncooperative daemon threads as well as force stop() them
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@3214 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/test/projects/project10/pom.xml
+++ b/src/test/projects/project10/pom.xml
@@ -1,11 +1,10 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cb.maven.plugins.exec</groupId>
-  <artifactId>project7</artifactId>
+  <artifactId>project9</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
   <name>Maven Exec Plugin</name>
-  <description>Make sure correctly written daemon threads are automatically handled</description>
   <inceptionYear>2005</inceptionYear>
   <licenses>
     <license>
@@ -29,10 +28,9 @@
            </execution>
         </executions>
         <configuration>
-          <mainClass>org.codehaus.mojo.exec.MainWithThreads</mainClass>
-          <arguments>
-            <argument>cancelTimer</argument>
-          </arguments>
+          <mainClass>org.codehaus.mojo.exec.MainUncooperative</mainClass>
+          <daemonThreadJoinTimeout>3000</daemonThreadJoinTimeout>
+          <stopUnresponsiveDaemonThreads>true</stopUnresponsiveDaemonThreads>
         </configuration>
       </plugin>
     </plugins>
