Reference David Smiley as contributor. He's the one who fixed MEXEC-6 and MEXEX-15
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@3215 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,17 @@
       <timezone>+1</timezone>
     </developer>
   </developers>
+
+  <contributors>
+    <contributor>
+      <name>David Smiley</name>
+      <email>protected</email>
+      <roles>
+        <role>Patch Contributor</role>
+      </roles>
+    </contributor>
+  </contributors>
+
   <licenses>
     <license>
       <name>Apache License 2</name>
