Add Milos to contributor list
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@3638 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
         <role>Patch Contributor</role>
       </roles>
     </contributor>
+    <contributor>
+      <name>Milos Kleint</name>
+      <email>protected</email>
+      <roles>
+        <role>Patch Contributor</role>
+      </roles>
+    </contributor>
   </contributors>
 
   <licenses>
