add description to pom
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@3685 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>exec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
+  <description>A plugin to allow execution of system and Java programs</description>
   <version>1.1-beta-1-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
