--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
-  <version>1.1-beta-1-SNAPSHOT</version>
+  <version>1.1-beta-1</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
   <issueManagement>
@@ -94,4 +94,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <scm>
+    <connection>scm:svn:https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1-beta-1</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1-beta-1</developerConnection>
+    <url>https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1-beta-1</url>
+  </scm>
 </project>
