MEXEC-31: make doc comply with docck:check
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@5085 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
   <version>1.1-beta-2-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
+  <prerequisites>
+    <maven>2.0.4</maven>
+  </prerequisites>
   <issueManagement>
     <system>jira</system>
     <url>http://jira.codehaus.org/browse/MEXEC</url>
