--- a/src/test/projects/project14/pom.xml
+++ b/src/test/projects/project14/pom.xml
@@ -1,11 +1,11 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cb.maven.plugins.exec</groupId>
-  <artifactId>project13</artifactId>
+  <artifactId>project14</artifactId>
   <version>0.1</version>
   <packaging>jar</packaging>
   <name>Maven Exec Plugin</name>
-  <description>Test that one can force adding the test-classpath for the exec mojo</description>
+  <description>Test that one can force adding the test-classpath for the java mojo</description>
 
   <inceptionYear>2005</inceptionYear>
   <licenses>
@@ -40,7 +40,7 @@
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
-    </dependency>      
+    </dependency>  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -59,19 +59,15 @@
            <execution>
               <phase>test</phase>
               <goals>
-                 <goal>exec</goal>
+                 <goal>java</goal>
               </goals>
            </execution>
         </executions>
         <configuration>
-          <executable>java</executable>
           <classpathScope>test</classpathScope>
+          <mainClass>org.codehaus.mojo.exec.test1.Test</mainClass>
           <arguments>
-            <argument>-Dproject.env1=value1</argument>
-            <argument>-classpath</argument>
-            <classpath/>
-            <argument>org.codehaus.mojo.exec.test1.Test</argument>
-            <argument>target/exec/output.txt</argument>
+            <argument>target/output.txt</argument>
             <argument>arg1</argument>
             <argument>arg2</argument>
           </arguments>
