--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
   <parent>
     <artifactId>mojo</artifactId>
     <groupId>org.codehaus.mojo</groupId>
-    <version>17-SNAPSHOT</version>
+    <version>17</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>exec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Maven Exec Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
-  <version>1.1-beta-2-SNAPSHOT</version>
+  <version>1.1</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
   <prerequisites>
@@ -71,9 +71,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</developerConnection>
-    <url>http://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</url>
+    <connection>scm:svn:http://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1</developerConnection>
+    <url>http://svn.codehaus.org/mojo/tags/exec-maven-plugin-1.1</url>
   </scm>
 
   <dependencies>
