--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
+      <artifactId>maven-toolchain</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
       <version>2.0.4</version> 
     </dependency>
@@ -100,8 +105,7 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>2.0</version> 
-      <scope>test</scope>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
