--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>exec-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Maven Exec Plugin</name>
+  <name>Exec Maven Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
   <version>1.1.1-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
