--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <artifactId>mojo</artifactId>
-    <groupId>org.codehaus.mojo</groupId>
-    <version>17</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>mojo-parent</artifactId>
+    <version>18</version>
+  </parent>
+
   <artifactId>exec-maven-plugin</artifactId>
+  <version>1.1.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
+
   <name>Exec Maven Plugin</name>
   <description>A plugin to allow execution of system and Java programs</description>
-  <version>1.1.1-SNAPSHOT</version>
   <url>http://mojo.codehaus.org/exec-maven-plugin</url>
   <inceptionYear>2005</inceptionYear>
   <prerequisites>
@@ -73,7 +76,7 @@
   <scm>
     <connection>scm:svn:http://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</connection>
     <developerConnection>scm:svn:https://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</developerConnection>
-    <url>http://svn.codehaus.org/mojo/trunk/mojo/exec-maven-plugin</url>
+    <url>http://fisheye.codehaus.org/browse/mojo/trunk/mojo/exec-maven-plugin</url>
   </scm>
 
   <dependencies>
