--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
-    <version>21</version>
+    <version>22</version>
   </parent>
 
   <artifactId>exec-maven-plugin</artifactId>
@@ -130,6 +130,11 @@
       <artifactId>maven-plugin-testing-harness</artifactId>
       <version>1.0-beta-1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-exec</artifactId>
+      <version>1.0.1</version>
     </dependency>
   </dependencies>
 </project>
