refactor ITs to use java instead of mvn, because CI servers might not have it on their PATH
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@14700 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/mexec-100/pom.xml
+++ b/src/it/mexec-100/pom.xml
@@ -13,9 +13,9 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>@project.version@</version>
         <configuration>
-          <executable>mvn</executable>
+          <executable>java</executable>
           <arguments>
-            <argument>-v</argument>
+            <argument>-version</argument>
             <argument>-Dsome.file="${project.build.directory}/Name With Spaces.exe"</argument>
           </arguments>
         </configuration>
