MEXEC-101: adjust pom to move to java5
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@15586 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
     </dependencies>
 
     <properties>
+        <mojo.java.target>1.5</mojo.java.target>
         <mavenVersion>2.0.6</mavenVersion>
     </properties>
 
@@ -174,7 +175,7 @@
               <configuration>
                 <signature>
                   <groupId>org.codehaus.mojo.signature</groupId>
-                  <artifactId>java14</artifactId>
+                  <artifactId>java15</artifactId>
                   <version>1.0</version>
                 </signature>
               </configuration>
