Use generic OS path separators
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@15588 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/mexec-66/pom.xml
+++ b/src/it/mexec-66/pom.xml
@@ -30,7 +30,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <commandlineArgs>-classpath %classpath;customdir-after Main</commandlineArgs>
+              <commandlineArgs>-classpath %classpath${path.separator}customdir-after Main</commandlineArgs>
             </configuration>
           </execution>
           <execution>
@@ -40,7 +40,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <commandlineArgs>-classpath customdir-before;%classpath Main</commandlineArgs>
+              <commandlineArgs>-classpath customdir-before${path.separator}%classpath Main</commandlineArgs>
             </configuration>
           </execution>
           <execution>
@@ -50,7 +50,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <commandlineArgs>-classpath customdir-before;%classpath;customdir-after Main</commandlineArgs>
+              <commandlineArgs>-classpath customdir-before${path.separator}%classpath${path.separator}customdir-after Main</commandlineArgs>
             </configuration>
           </execution>
         </executions>
