Better impl for MEXEC-86, though still not satisfied due to unsychronized calls on the FileStream, which can cause trouble with linebreaks
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@17291 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/it/mexec-86/pom.xml
+++ b/src/it/mexec-86/pom.xml
@@ -14,15 +14,17 @@
         <version>@pom.version@</version>
         <executions>
           <execution>
-            <phase>validate</phase>
+            <phase>process-classes</phase>
             <goals>
               <goal>exec</goal>
             </goals>
             <configuration>
               <outputFile>${project.build.directory}/out.log</outputFile>
-              <executable>mvn</executable>
+              <executable>java</executable>
               <arguments>
-                <argument>-v</argument>
+                <argument>-cp</argument>
+                <argument>target/classes</argument>
+                <argument>Main</argument>
               </arguments>
             </configuration>
           </execution>
