exclude mexec-86 from IT, it's unstable
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@17336 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,9 @@
                     </goals>
                     <settingsFile>src/it/settings.xml</settingsFile>
                     <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+                    <pomExcludes>
+                      <pomExclude>mexec-86/pom.xml</pomExclude> <!-- unstable -->
+                    </pomExcludes>
                 </configuration>
                 <executions>
                     <execution>
